syntax = "proto3";

package router;

option go_package = "github.com/Liquescent-Development/arca/helpervm/router-service/proto";

// RouterService manages VLAN interfaces and routing on the helper VM
// This service runs in the helper VM and is accessed by Arca daemon via vsock
service RouterService {
  // CreateVLAN creates a VLAN interface on the helper VM
  // Example: Creates eth0.100 for Docker bridge network
  rpc CreateVLAN(CreateVLANRequest) returns (CreateVLANResponse);

  // DeleteVLAN removes a VLAN interface from the helper VM
  rpc DeleteVLAN(DeleteVLANRequest) returns (DeleteVLANResponse);

  // ConfigureNAT configures NAT (MASQUERADE) for a network
  rpc ConfigureNAT(ConfigureNATRequest) returns (ConfigureNATResponse);

  // RemoveNAT removes NAT configuration for a network
  rpc RemoveNAT(RemoveNATRequest) returns (RemoveNATResponse);

  // ConfigureDNS configures dnsmasq for a VLAN network
  rpc ConfigureDNS(ConfigureDNSRequest) returns (ConfigureDNSResponse);

  // AddPortMapping adds a port forwarding rule (DNAT)
  rpc AddPortMapping(AddPortMappingRequest) returns (AddPortMappingResponse);

  // RemovePortMapping removes a port forwarding rule
  rpc RemovePortMapping(RemovePortMappingRequest) returns (RemovePortMappingResponse);

  // ListVLANs lists all VLAN interfaces on the helper VM
  rpc ListVLANs(ListVLANsRequest) returns (ListVLANsResponse);

  // GetHealth returns health status of the router service
  rpc GetHealth(HealthRequest) returns (HealthResponse);
}

message CreateVLANRequest {
  // VLAN ID (100-4094)
  uint32 vlan_id = 1;

  // Network subnet in CIDR notation (e.g., "172.18.0.0/16")
  string subnet = 2;

  // Gateway IP address (e.g., "172.18.0.1")
  // This IP will be assigned to the VLAN interface
  string gateway = 3;

  // Network name (for DNS/logging)
  string network_name = 4;

  // Optional: MTU for the VLAN interface
  uint32 mtu = 5;

  // Optional: Enable NAT for this network (default: true)
  bool enable_nat = 6;
}

message CreateVLANResponse {
  // Success status
  bool success = 1;

  // Created interface name (e.g., "eth0.100")
  string interface_name = 2;

  // Gateway MAC address
  string mac_address = 3;

  // Error message if success = false
  string error = 4;
}

message DeleteVLANRequest {
  // VLAN ID to delete
  uint32 vlan_id = 1;
}

message DeleteVLANResponse {
  // Success status
  bool success = 1;

  // Error message if success = false
  string error = 2;
}

message ConfigureNATRequest {
  // VLAN ID
  uint32 vlan_id = 1;

  // Source subnet to NAT (e.g., "172.18.0.0/16")
  string source_subnet = 2;
}

message ConfigureNATResponse {
  // Success status
  bool success = 1;

  // Error message if success = false
  string error = 2;
}

message RemoveNATRequest {
  // VLAN ID
  uint32 vlan_id = 1;

  // Source subnet that was NATed
  string source_subnet = 2;
}

message RemoveNATResponse {
  // Success status
  bool success = 1;

  // Error message if success = false
  string error = 2;
}

message ConfigureDNSRequest {
  // VLAN ID
  uint32 vlan_id = 1;

  // Network subnet (e.g., "172.18.0.0/16")
  string subnet = 2;

  // Gateway IP (DNS server will listen here)
  string gateway = 3;

  // DNS domain for container name resolution
  // e.g., "frontend.docker.internal"
  string domain = 4;

  // Container hostname â†’ IP mappings
  map<string, string> hosts = 5;
}

message ConfigureDNSResponse {
  // Success status
  bool success = 1;

  // Error message if success = false
  string error = 2;
}

message AddPortMappingRequest {
  // Container IP address
  string container_ip = 1;

  // Container port
  uint32 container_port = 2;

  // Host port to expose
  uint32 host_port = 3;

  // Protocol (tcp/udp)
  string protocol = 4;

  // VLAN ID (for routing back to container)
  uint32 vlan_id = 5;
}

message AddPortMappingResponse {
  // Success status
  bool success = 1;

  // Error message if success = false
  string error = 2;
}

message RemovePortMappingRequest {
  // Host port to remove
  uint32 host_port = 1;

  // Protocol (tcp/udp)
  string protocol = 2;
}

message RemovePortMappingResponse {
  // Success status
  bool success = 1;

  // Error message if success = false
  string error = 2;
}

message ListVLANsRequest {
  // Optional: Filter by VLAN ID
  uint32 vlan_id = 1;
}

message ListVLANsResponse {
  // List of VLAN interfaces
  repeated VLANInterface vlans = 1;

  // Error message if retrieval failed
  string error = 2;
}

message VLANInterface {
  // VLAN ID
  uint32 vlan_id = 1;

  // Interface name (e.g., "eth0.100")
  string interface_name = 2;

  // Gateway IP address
  string gateway = 3;

  // Subnet in CIDR notation
  string subnet = 4;

  // MAC address
  string mac_address = 5;

  // MTU
  uint32 mtu = 6;

  // Interface is up
  bool is_up = 7;

  // NAT enabled
  bool nat_enabled = 8;
}

message HealthRequest {
  // No parameters
}

message HealthResponse {
  // Service is healthy
  bool healthy = 1;

  // Status message
  string status = 2;

  // Number of active VLANs
  uint32 active_vlans = 3;

  // Service uptime in seconds
  uint64 uptime_seconds = 4;
}
